ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail216.hs
{-# LANGUAGE ConstraintKinds, MultiParamTypeClasses, UndecidableInstances #-}
module TcFail where

class cls (A cls) => A cls c where
